--- a/.env
+++ b/.env
@@ -1,11 +1,13 @@
 MQTT_DATA_TOPIC = "psertest"
 MQTT_ALARM_TOPIC = "psertest2"
+MQTT_SILENCE_TOPIC = "psertest3"
+
 MQTT_SERVER_ADDRESS = "mqtt-dashboard.com"
 MQTT_SERVER_PORT = 1883
 
 INFLUX_ADDRESS = "http://localhost:8086"
 INFLUX_PORT = "8086"
 INFLUX_USER = "admin"
-INFLUX_TOKEN = "xYPbjTCyp-aia5SCVHgZxVOiXvQVS9AC0xdHeNbmnn1sBwJmnsdOVVZgBCWP2VRTE_k9Y3uegz89r_8_iO2W6A=="
+INFLUX_TOKEN = "admin_token"
 INFLUX_ORG = "pser_umu"
 INFLUX_BUCKET = "pser_umu_bucket"
